tests/paczka1/fuzzy1/12382061.err
Error in line 6: uWsdPnvWtPN S353 837,2
Error in line 14: uWsdPnvWtPN S934 57,7
Error in line 20: uWsdPnvWtPN S189 0,3
Error in line 23: uWsdPnvWtPN S353 66,8
Error in line 30: zpE8ntbPWmP A155 87,0
Error in line 38: uWsdPnvWtPN S353 90,69
Error in line 22: S189 A155 141,6
